# homework_2.10

homework_2.10.1/: CMakeLists.txt  homework_2.10.1.cpp  homework_2.10.1.sln  homework_2.10.1.vcxproj  homework_2.10.1.vcxproj.filters
homework_2.10.2/: CMakeLists.txt  class_Equilateral_triangle.h  class_Figure.h  class_Isosceles_triangle.h  class_Parallelogram.h  class_Quadrangle.h  class_Rectangle.h  class_Rectangular_triangle.h  class_Rhomb.h  class_Square.h  class_Triangle.h  homework_2.10.2.cpp  homework_2.10.2.sln  homework_2.10.2.vcxproj  homework_2.10.2.vcxproj.filters
